...
      break;
  }

  return (
    <TouchableOpacity
      style={[styles.container, ContainerStyle]}
      testID="HeaderIconBack.Button"
      onPress={onPressBack}>
      <View style={[styles.inner, InnerStyle]}>
        <Icon
          size={iconSize}
          as={fontType}
          name={icon}
...
