...
    Analytics.logEvent('screen', 'catalog/newcar/list', {
      search_url: `/stock/new/cars/get/city/${DEFAULT_CITY[region].id}/`,
    });
  }, [DEFAULT_CITY[region].id]);

  return (
    <View style={styles.content} testID="NewCarsListSreen.Wrapper">
      {loading ? (
        <LogoLoader />
      ) : (
        <>
          <CarList
            data={data}
...
