...
    return a.id - b.id;
  });

  const rowHeight = (heightScreen - 246) / menu.length;

  return (
    <View testID="MenuScreen.Wrapper">
      <VStack style={{marginTop: 0}}>
        {menu.map(item => (
          <MenuItem
            key={`menu-item-${item.id}`}
            data={item}
            navigation={props.navigation}
...
